fixed button within mobile menu not centered

--- a/src/components/m-main-navigation-mobile/index.scss
+++ b/src/components/m-main-navigation-mobile/index.scss
@@ -87,8 +87,9 @@ body.is-body-frozen {
 .m-main-navigation-mobile__box {
   > .m-button {
     display: block;
-
     margin: 20px $main-navigation-mobile__item-padding-right 0 $main-navigation-mobile__item-padding-left;
+
+    text-align: center;
 
     + * {
       margin-top: 20px;
